cmake_minimum_required(VERSION 3.23)
project(DataStructure_Assigment3)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructure_Assigment3 main.cpp)

add_executable(minHeap C:/Users/20100/Desktop/DataStructure-Assigment3/MinHeap.cpp FileData.cpp Student.cpp)

add_executable(maxHeap C:/Users/20100/Desktop/DataStructure-Assigment3/MaxHeap.cpp FileData.cpp Student.cpp)
